<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Score</string>
    <string name="ajustes">Ajustes</string>
    <string name="editar">Editar</string>
    <string name="titulo_generico">Genérico</string>
    <string name="titulo_monetario">Monetario</string>
    <string name="titulo_tutorial">Tutorial</string>
    <string name="titulo_nosotros">Nosotros</string>
    <string name="desarrollador">Desarrollado por Inactec</string>
    <string name="puntos_por_defecto">Puntos por Defecto</string>
    <string name="puntos_a_sumar">Puntos a Sumar</string>
    <string name="puntos_a_restar">Puntos a Restar</string>
    <string name="puntos_max">Máxima Puntuación</string>
    <string name="puntos_min">Mínima Puntuación</string>
    <string name="aplicar_cambios">Aplicar Cambios</string>
    <string name="agregar_jugador">Agregar</string>
    <string name="introduce_jugador">Introduce el jugador</string>
    <string name="signo_menos">-</string>
    <string name="signo_mas">+</string>
    <string name="nosotros">Inactec está formado por un grupo de ingenieros 
        especializados en el desarrollo web y el área de movilidad.\n\n
        Nuestra función principal es la de aprender y desarrollar las tecnologías más 
        modernas en el desarrollo web y móvil. Realizamos proyectos propios y por cuenta ajena.\n\n
        Para más info, visítanos en inactec.com.	</string>
    <string name="tutorial">SCORE es una app realizada para llevar las puntuaciones de cualquier juego.\n\n
        La app consta de los siguientes modos de marcador:\n\n
        - Genérico: Tendremos un marcador genérico de números enteros, es decir, sin decimales. Para añadir un jugador, simplemente, se introduce un nombre y se agrega. Si lo deseamos podemos modificar los puntos iniciales, puntos a sumar, a restar, los mínimos y los máximos desde el icono de ajustes que aparece en la parte superior derecha de la pantalla.\n
        RECOMENDADO PARA juegos de cartas, juegos de mesa con sistema de puntuación entero como "Colonos de Catán",....\n
        - Monetario: Tendremos un marcador con números decimales. Su funcionamiento es igual que el del marcador genérico.\n
        RECOMENDADO PARA juegos económicos como el Bingo y similares, Ruleta, Póker,....\n\n
        Gracias y espero que lo disfrute.</string>
    <string name="title_activity_nosotros">Nosotros</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_monetario">Monetario</string>
    <string name="title_activity_monetario_ajustes">MonetarioAjustes</string>

</resources>